# data-ingestion

./: .gitignore  Cargo.toml  README.md  requirements-build.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
crates/aytch/: Cargo.toml  README.md  pyproject.toml  requirements.txt
crates/aytch/src/: main.rs
crates/data-ingestion-core/: Cargo.toml
crates/data-ingestion-core/examples/: demo.rs
crates/data-ingestion-core/src/: error.rs  lib.rs
crates/data-ingestion-core/src/contract/: builder.rs  enricher.rs  mod.rs  model.rs  validator.rs
crates/data-ingestion-core/src/ingestion/: detector.rs  mod.rs  reader_csv.rs  reader_json.rs  reader_json_schema.rs  reader_xml.rs  reader_xsd.rs  reader_yaml.rs  traits.rs  type_inference.rs
crates/data-ingestion-core/src/ir/: mod.rs  model.rs  normalizer.rs
crates/data-ingestion-core/src/output/: csv.rs  json.rs  mod.rs  xml.rs  yaml.rs
crates/data-ingestion-core/tests/: integration_test.rs
crates/data-ingestion-python/: Cargo.toml  README.md  data_ingestion.pyi  pyproject.toml  requirements.txt
crates/data-ingestion-python/src/: lib.rs
crates/data-ingestion-wasm/: Cargo.toml
crates/data-ingestion-wasm/src/: lib.rs
crates/data-quality-core/: Cargo.toml
crates/data-quality-core/src/: config.rs  error.rs  lib.rs
crates/data-quality-core/src/contract_analyzer/: constraint_analyzer.rs  field_analyzer.rs  mod.rs  pii_analyzer.rs  schema_analyzer.rs
crates/data-quality-core/src/expectations/: custom.rs  mod.rs  serializer.rs  types.rs
crates/data-quality-core/src/output/: gx_json.rs  gx_yaml.rs  manifest.rs  mod.rs  summary_csv.rs
crates/data-quality-core/src/suites/: criminal_background.rs  cross_system_consistency.rs  data_accuracy.rs  data_business_rules.rs  data_completeness.rs  data_consistency.rs  data_dependency_checks.rs  data_format_consistency.rs  data_integrity.rs  data_profile.rs  data_sensitivity.rs  data_timeliness.rs  data_uniqueness.rs  data_validity.rs  data_volume_anomalies.rs  mod.rs  performance_metrics.rs  security_compliance.rs
crates/data-quality-core/tests/: baseline_suite_counts.rs  contract_analyzer.rs  integration.rs
crates/data-quality-python/: Cargo.toml  data_quality.pyi  pyproject.toml  requirements.txt
crates/data-quality-python/src/: lib.rs
crates/data-quality-wasm/: Cargo.toml
crates/data-quality-wasm/src/: lib.rs
docs/: API_AND_ERRORS.md  ARCHITECTURE.md  CRATES_AND_BUILD.md  DATA_MODELS.md  DATA_QUALITY_ARCHITECTURE.md  DQ_DATA_MODELS.md  DQ_EXPECTATIONS.md  DQ_OUTPUT_AND_BINDINGS.md  DQ_SUITES_AND_ANALYZER.md  MODULES.md  PYTHON_ABI.md  WASM_STRATEGY.md
examples/: complicated-stress-test.json  complicated.json  demo.js  demo.py  sample.xml  sample.xsd  sample_data_dictionary.csv  sample_json_dataset.json  sample_json_schema.json  sample_schema.yaml
infra/bronze/: README  bronze-zone.md  inventory.yml  site.yml
infra/bronze/group_vars/: all.yml
infra/bronze/roles/bronze-bucket/tasks/: main.yml
infra/bronze/roles/ceph/defaults/: main.yml
infra/bronze/roles/ceph/tasks/: main.yml
infra/bronze/roles/minio/defaults/: main.yml
infra/bronze/roles/minio/tasks/: main.yml
infra/bronze/roles/minio/templates/: minio.service.j2
scripts/: build_all.ps1  build_all.sh  build_aytch.ps1  build_aytch.sh  build_aytch_wheel.ps1  build_dataquality_python.ps1  build_dataquality_wasm.ps1  build_python.ps1  build_python.sh  build_wasm.ps1  build_wasm.sh
