[workspace]
members = [
    "crates/data-ingestion-core",
    "crates/data-ingestion-wasm",
    "crates/data-ingestion-python",
    "crates/data-quality-core",
    "crates/data-quality-wasm",
    "crates/data-quality-python",
    "crates/aytch",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["0xInfD4t"]
license = "MIT"
repository = "https://github.com/0xInfD4t/data-ingestion"

# ── Shared dependencies (version-pinned here, referenced in crates) ──────────

[workspace.dependencies]

# Serialization
serde       = { version = "1",    features = ["derive"] }
serde_json  = { version = "1" }
serde_yaml  = { version = "0.9" }

# XML parsing and writing
quick-xml   = { version = "0.36", features = ["serialize"] }

# CSV
csv         = { version = "1.3" }

# UUID generation (WASM-compatible via getrandom/js feature)
uuid        = { version = "1",    features = ["v4", "serde", "js"] }

# Date/time
chrono      = { version = "0.4",  features = ["serde"] }

# Error handling
thiserror   = { version = "1" }
anyhow      = { version = "1" }

# CLI
clap        = { version = "4", features = ["derive"] }

# Regex (type inference + PII detection)
regex       = { version = "1" }
once_cell   = { version = "1" }

# Logging
log         = { version = "0.4" }

# WASM
wasm-bindgen             = { version = "0.2" }
js-sys                   = { version = "0.3" }
console_error_panic_hook = { version = "0.1" }
getrandom                = { version = "0.2", features = ["js"] }

# Python
pyo3 = { version = "0.22", features = ["extension-module"] }

# Ordered map (stable JSON key ordering for GX kwargs)
indexmap    = { version = "2", features = ["serde"] }

# Dev / testing
pretty_assertions = { version = "1" }
