[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "aytch"
version = "0.1.0"
description = "Data contract and Great Expectations data quality suite generator CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["data-contract", "data-engineering", "great-expectations", "data-quality", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Environment :: Console",
]

[tool.maturin]
binaries = ["aytch"]
