[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "data-ingestion"
version = "0.1.0"
description = "Data contract generation engine — parse JSON, XML, XSD, CSV, YAML into structured data contracts"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["data-contract", "data-engineering", "schema", "json-schema", "xsd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "data_ingestion"
