[package]
name    = "data-quality-core"
version.workspace = true
edition.workspace = true

[dependencies]
data-ingestion-core = { path = "../data-ingestion-core" }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
csv         = { workspace = true }
uuid        = { workspace = true }
thiserror   = { workspace = true }
log         = { workspace = true }
indexmap    = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
